<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rmd.donateblood.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_donate"
        android:name="com.rmd.donateblood.ui.donate_or_request.Fragment_Donate"
        android:label="@string/menu_donate_blood"
        tools:layout="@layout/fragment_donate_or_request" >
        <action
            android:id="@+id/action_nav_donate_to_nav_donate_list"
            app:destination="@id/nav_donate_list" />
    </fragment>
    <fragment
        android:id="@+id/nav_donate_list"
        android:name="com.rmd.donateblood.ui.donate_or_request.Fragment_Donate_List"
        android:label="@string/menu_all_donate"
        tools:layout="@layout/fragment_donate_or_request_list" >
        <action
            android:id="@+id/action_nav_donate_list_to_nav_update_donate_request"
            app:destination="@id/nav_update_donate_request" />
    </fragment>
    <fragment
        android:id="@+id/nav_request"
        android:name="com.rmd.donateblood.ui.donate_or_request.Fragment_Request"
        android:label="@string/menu_request"
        tools:layout="@layout/fragment_donate_or_request" >
        <action
            android:id="@+id/action_nav_request_to_nav_request_list"
            app:destination="@id/nav_request_list" />
    </fragment>
    <fragment
        android:id="@+id/nav_request_list"
        android:name="com.rmd.donateblood.ui.donate_or_request.Fragment_Request_List"
        android:label="@string/menu_all_request"
        tools:layout="@layout/fragment_donate_or_request_list" >
        <action
            android:id="@+id/action_nav_request_list_to_nav_update_donate_request"
            app:destination="@id/nav_update_donate_request" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.rmd.donateblood.ui.profile.Fragment_Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_profile_update"
            app:destination="@id/nav_profile_update" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile_update"
        android:name="com.rmd.donateblood.ui.profile.Fragment_Profile_Update"
        android:label="@string/menu_profile_update"
        tools:layout="@layout/fragment_profile_update" >
        <action
            android:id="@+id/action_nav_profile_update_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.rmd.donateblood.ui.notification.activity_fragment.Fragment_Notification"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" >
        <action
            android:id="@+id/action_nav_notification_to_nav_matched"
            app:destination="@id/nav_matched" />
    </fragment>

    <fragment
        android:id="@+id/nav_matched"
        android:name="com.rmd.donateblood.ui.donate_or_request.Fragment_Matched_Donate_or_Request"
        android:label="@string/menu_matched"
        tools:layout="@layout/row_donate_or_request" />

    <fragment
        android:id="@+id/nav_update_donate_request"
        android:name="com.rmd.donateblood.ui.donate_or_request.Fragment_Update_Donate_or_Request"
        android:label="@string/menu_update_donate_request"
        tools:layout="@layout/fragment_donate_or_request" >
        <action
            android:id="@+id/action_nav_update_donate_request_to_nav_request_list"
            app:destination="@id/nav_request_list" />
        <action
            android:id="@+id/action_nav_update_donate_request_to_nav_donate_list"
            app:destination="@id/nav_donate_list" />
    </fragment>
    <!-->
    <fragment
        android:id="@+id/nav_"
        android:name="com.rmd.donatebloodod.ui"
        android:label="@string/menu"
        tools:layout="@layout/fragment" />
    <-->
</navigation>