<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_update_img"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/profile_image" />

            <EditText
                android:id="@+id/username_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/mail_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail" />

            <EditText
                android:id="@+id/phone_number_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber_" />
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="5dp"
                    android:text="@string/blood_group"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <Spinner
                    android:id="@+id/spinner_blood_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/blood_group_array"
                    android:textAlignment="textEnd" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/validate_update_profile_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:drawableStart="@drawable/ic_validate"
                android:text="@string/validate" />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>